@@ -41,6 +41,7 @@
             </control>  
             
             <control type="grouplist" id="3">
+            	<height>462</height>
                 <include>SettingsDialogGrouplistVars</include>
                 <!-- MOVIES WIDGET -->
 				<control type="button" id="2100">
@@ -60,7 +61,6 @@
 					<onclick condition="stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onclick>
 					<label>[B]$LOCALIZE[20342] $LOCALIZE[41162][/B]</label>
 					<label2>$INFO[Skin.String(movie.widget.type)]</label2>
-					<visible>!StringCompare(Skin.String(homescreen.style),metro)</visible>
 				</control>
 				<!-- TV SHOWS WIDGET -->
 				<control type="button" id="2101">
@@ -80,7 +80,6 @@
 					<onclick condition="stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onclick>
 					<label>[B]$LOCALIZE[20343] $LOCALIZE[41162][/B]</label>
 					<label2>$INFO[Skin.String(tvshow.widget.type)]</label2>
-					<visible>!StringCompare(Skin.String(homescreen.style),metro)</visible>
 				</control>
 				<!-- Music WIDGET -->
 				<control type="button" id="2102">
@@ -100,7 +99,6 @@
 					<onclick condition="stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onclick>												
 					<label>[B]$LOCALIZE[2] $LOCALIZE[41162][/B]</label>
 					<label2>$INFO[Skin.String(music.widget.type)]</label2>
-					<visible>!StringCompare(Skin.String(homescreen.style),metro)</visible>
 				</control>
 				<!-- Default WIDGET -->
 				<control type="button" id="2103">
@@ -143,7 +141,18 @@
 					<label>42422</label>
 					<visible>!Skin.HasSettings(disable.programs) + System.HasAddon(script.games.rom.collection.browser)</visible>
 				</control>
-				<control type="button" id="2106">
+				<control type="radiobutton" id="2106">
+					<posx>0</posx>
+					<posy>0</posy>
+					<width>644</width>
+					<height>77</height>
+					<include>SettingsCategoryPanelRadioButtonVars</include>
+					<onclick>Skin.ToggleSetting(home.scrollablewidgets)</onclick>
+					<selected>Skin.HasSetting(home.scrollablewidgets)</selected>										
+					<label>42454</label>
+					<visible>!stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453]) | !stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453]) | !stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])</visible>
+				</control>
+				<control type="button" id="2107">
 					<posx>0</posx>
 					<posy>0</posy>
 					<width>644</width>
@@ -157,7 +166,7 @@
 					<label>[B]$LOCALIZE[42423]:[/B]$INFO[Skin.String(pictures.slideshowpath),[CR],]</label>
 					<visible>StringCompare(Skin.String(homescreen.style),panel) + !Skin.HasSetting(disable.programs) + stringcompare(Skin.String(defaultpanel.widget.type),$LOCALIZE[10511]) + !Skin.HasSetting(UseRCB)</visible>
 				</control>
-				<control type="button" id="2107">
+				<control type="button" id="2108">
 					<posx>0</posx>
 					<posy>0</posy>
 					<width>644</width>
